unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Assumptions__c.field-meta.xml
<CustomField>
    <fullName>inov8__Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>