unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Business_Case__c.field-meta.xml
<CustomField>
    <fullName>inov8__Business_Case__c</fullName>
    <inlineHelpText>Business objectives: Requested solution description and expected result. Mention if this is a global solution or call out if there is any variation by region.</inlineHelpText>
    <label>Business Case</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>