unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Days_to_go__c.field-meta.xml
<CustomField>
    <fullName>inov8__Days_to_go__c</fullName>
    <formula>inov8__Deadline_formula__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to go</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>