unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Deadline__c.field-meta.xml
<CustomField>
    <fullName>inov8__Deadline__c</fullName>
    <label>End Date Rollup</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__End_Date_Rollup__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>