unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Description__c.field-meta.xml
<CustomField>
    <fullName>inov8__Description__c</fullName>
    <inlineHelpText>A general description of the project.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>