unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Fiscal_Year_Difference__c.field-meta.xml
<CustomField>
    <fullName>inov8__Fiscal_Year_Difference__c</fullName>
    <formula>Value(Right( inov8__End_Fiscal_Year__c ,2))-Value(Right( inov8__Start_Fiscal_Year__c ,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>