unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inov8__Initial_Start_Date__c</fullName>
    <label>Initial Start Date</label>
    <type>Date</type>
</CustomField>