unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Kickoff_formula__c.field-meta.xml
<CustomField>
    <fullName>inov8__Kickoff_formula__c</fullName>
    <formula>IF((ISNULL(inov8__Start_Date_Rollup__c)&amp;&amp; ISNULL(inov8__Start_Date_from_parent_phase__c)),  inov8__Initial_Start_Date__c , IF(NOT(ISNULL(inov8__Start_Date_Rollup__c))&amp;&amp; NOT(ISNULL(inov8__Start_Date_from_parent_phase__c)),if(inov8__Start_Date_from_parent_phase__c&gt;inov8__Start_Date_Rollup__c,inov8__Start_Date_Rollup__c,inov8__Start_Date_from_parent_phase__c),if(ISNULL(inov8__Start_Date_from_parent_phase__c),inov8__Start_Date_Rollup__c,inov8__Start_Date_from_parent_phase__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>