unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Path_to_Green__c.field-meta.xml
<CustomField>
    <fullName>inov8__Path_to_Green__c</fullName>
    <label>Path to Green</label>
    <type>TextArea</type>
</CustomField>