unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Percentage_Completion__c</fullName>
    <formula>IF(inov8__Sum_of_Task_Duration__c==0,0,FLOOR(( inov8__Sum_Wheigted_perc__c /  inov8__Sum_of_Task_Duration__c )*100)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>