unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__PMO_Contact__c.field-meta.xml
<CustomField>
    <fullName>inov8__PMO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMO Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>