unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>inov8__Portfolio__c</fullName>
    <label>Portfolio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F&amp;S</fullName>
            </value>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>Q2O</fullName>
            </value>
            <value>
                <fullName>R2R</fullName>
            </value>
            <value>
                <fullName>New Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>