unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Program__c.field-meta.xml
<CustomField>
    <fullName>inov8__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>inov8__PMT_Program__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>