unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Program_Text__c.field-meta.xml
<CustomField>
    <fullName>inov8__Program_Text__c</fullName>
    <formula>inov8__Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>