unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Project_End_Month__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_End_Month__c</fullName>
    <formula>TEXT(YEAR(inov8__Deadline_formula__c)) + &quot;.&quot; + TEXT(MONTH(inov8__Deadline_formula__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project End Month</label>
    <type>Text</type>
</CustomField>