unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_Lead__c</fullName>
    <formula>Owner:User.FirstName+&quot; &quot;+Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Lead</label>
    <type>Text</type>
</CustomField>