unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Project_Size__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project_Size__c</fullName>
    <formula>IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Small&quot;),1, 
IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Medium&quot;),2, 
IF(ISPICKVAL(inov8__Level_of_Effort__c,&quot;Large&quot;),3,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>