unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Release_Qtr__c.field-meta.xml
<CustomField>
    <fullName>inov8__Release_Qtr__c</fullName>
    <formula>&quot;FY&quot; + CASE(MONTH(  inov8__Release_Date__c ),
1,TEXT(MOD(Year(inov8__Release_Date__c ),100)),
TEXT(MOD(Year(inov8__Release_Date__c ),100)+1)) 
+ &quot;-&quot; + 
CASE(MONTH( inov8__Release_Date__c ), 
1,&quot;Q4&quot;, 
2,&quot;Q1&quot;, 
3,&quot;Q1&quot;, 
4,&quot;Q1&quot;, 
5,&quot;Q2&quot;, 
6,&quot;Q2&quot;, 
7,&quot;Q2&quot;, 
8,&quot;Q3&quot;, 
9,&quot;Q3&quot;, 
10,&quot;Q3&quot;, 
11,&quot;Q4&quot;, 
12,&quot;Q4&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Qtr</label>
    <type>Text</type>
</CustomField>