unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__SOX_Comment__c.field-meta.xml
<CustomField>
    <fullName>inov8__SOX_Comment__c</fullName>
    <label>SOX Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>