unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Sponsor__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sponsor__c</fullName>
    <label>Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>