unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Start_Date_from_parent_phase__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Date_from_parent_phase__c</fullName>
    <label>Start Date from parent phase</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__Start_date_from_child_project__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>