unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Start_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Date_Rollup__c</fullName>
    <label>Start Date Rollup</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__Start_Date_Rollup__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>