unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Start_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Fiscal_Year__c</fullName>
    <formula>If($CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c!=1 &amp;&amp; Month(inov8__Kickoff_formula__c)&gt;=$CustomMetadata.inov8__PMT_Setting__mdt.inov8__Default.inov8__Start_Month_of_Fiscal_Year__c,
&#39;FY&#39;&amp;RIGHT(TEXT(YEAR(inov8__Kickoff_formula__c) +1),2),
&#39;FY&#39;&amp;RIGHT(TEXT(YEAR(inov8__Kickoff_formula__c)),2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Fiscal Year</label>
    <type>Text</type>
</CustomField>