unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Sum_of_sum_of_percentage_completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_of_sum_of_percentage_completion__c</fullName>
    <label>Sum of sum of percentage completion</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__Sum_Of_Task_Completion__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>