unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Sum_of_task_count_child_project__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_of_task_count_child_project__c</fullName>
    <label>Sum of task count child project</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__Sum_of_tasks_count_child__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>