unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__Sum_Wheigted_perc__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_Wheigted_perc__c</fullName>
    <label>Sum Wheigted %</label>
    <summarizedField>inov8__PMT_Phase__c.inov8__Phase_Weighted_Perc__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Phase__c.inov8__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>