unpackaged/main/default/objects/inov8__PMT_Project__c/fields/inov8__SystemsImpacted__c.field-meta.xml
<CustomField>
    <fullName>inov8__SystemsImpacted__c</fullName>
    <inlineHelpText>Please hold &#39;Ctrl&#39; for selecting multiple options</inlineHelpText>
    <label>System(s) Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>