unpackaged/main/default/objects/inov8__PMT_Project__c/validationRules/inov8__InitialStartDate_should_be_less.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__InitialStartDate_should_be_less</fullName>
    <active>true</active>
    <description>Initial Start date must be less than the Initial End date</description>
    <errorConditionFormula>NOT(ISNULL(inov8__Initial_Start_Date__c)) &amp;&amp; NOT(ISNULL(inov8__Initial_End_Date__c)) &amp;&amp; inov8__Initial_End_Date__c&lt; inov8__Initial_Start_Date__c</errorConditionFormula>
    <errorMessage>Initial End date must be after Initial Start date.</errorMessage>
</ValidationRule>