unpackaged/main/default/objects/inov8__PMT_Project__c/validationRules/inov8__SOX_comment_not_null_when_SOX_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__SOX_comment_not_null_when_SOX_checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(inov8__SOX_Impact__c = TRUE,inov8__SOX_Comment__c=&#39;&#39;)</errorConditionFormula>
    <errorMessage>SOX Comment should not be blank if SOX Impact is checked</errorMessage>
</ValidationRule>