unpackaged/main/default/objects/inov8__PMT_Project__c/listViews/inov8__All_Projects1.listView-meta.xml
<ListView>
    <fullName>inov8__All_Projects1</fullName>
    <columns>NAME</columns>
    <columns>inov8__Project_Owner__c</columns>
    <columns>inov8__Percentage_Completion__c</columns>
    <columns>inov8__Health_Icon__c</columns>
    <columns>inov8__Project_Status__c</columns>
    <columns>inov8__Deadline_formula__c</columns>
    <columns>inov8__Kickoff_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>