unpackaged/main/default/objects/inov8__PMT_Project__c/listViews/inov8__My_Projects_Home.listView-meta.xml
<ListView>
    <fullName>inov8__My_Projects_Home</fullName>
    <columns>NAME</columns>
    <columns>inov8__Project_Owner__c</columns>
    <columns>inov8__Health_Icon__c</columns>
    <columns>inov8__Project_Status__c</columns>
    <columns>inov8__Percentage_Completion__c</columns>
    <columns>inov8__Qtr_of_Completion__c</columns>
    <columns>inov8__Health_Comment__c</columns>
    <columns>inov8__Path_to_Green__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>inov8__Project_Health__c</field>
        <operation>equals</operation>
        <value>Not Started,On Track,At Risk,Late,On Hold</value>
    </filters>
    <label>My Open Projects</label>
</ListView>